cursive-bootstrap/tests/ui/E-TYP/E-TYP-2630.cursive
// RUN: compile-fail
// DIAG: E-TYP-2630
// SPEC: 6.2
// DESC: By-value FFI use of DropType without [[ffi_pass_by_value]]

[[layout(C)]]
record Resource {
    handle: i32

    procedure drop(~!) -> () {
        // cleanup
    }
}

extern "C" {
    procedure ffi_resource(r: Resource) -> () //~ ERROR E-TYP-2630
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
